--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <h1>Welcome to My Website</h1>  
 		
-		<img src="image/chloe.jpg" alt="CHLOEEE">
+		<img src="chloe.jpg" alt="CHLOEEE">
 		
     </main>
 	<script src="index.js"></script>
