--- a/index.html
+++ b/index.html
@@ -1,20 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  
+  <style>
+  
+/*body {
+ font-size:16px;
+}
+
+h1 {
+  font-size: 150%;
+  border: 1px solid blue;
+}
+*/
+
+
+</style>
+
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Website</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./2col.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
+	
+	
   </head>
   <body>
-    <main>
-        <h1>Welcome to My Website</h1>  
+  
+  <div id="header">
+   <h1>Welcome to My Website</h1>  
+  </div>
+  
+  <div id=content>
+    
 		
-		<img src="chloe.jpg" alt="CHLOEEE">
+	<div id="img">
+		<img src="images/chloe.jpg" alt="CHLOE1" height="100" width="150">
+	</div>
 		
-    </main>
+	<div id="img">
+		<img src="images/chloe1.jpg" alt="CHLOEEE" height="130" width="100">
+	</div>
+		
+	<div id="img">
+		<img src="images/cousin.jpg" alt="cuzoon" height="100" width="150">
+	</div>
+		
+	<div id="img">
+		<img src="images/sampiano1.jpg" alt="piano" height="100" width="150">
+	</div>
+
+	<table>
+		<tr><th>Name</th><td>Sam</td></tr>
+		<tr><th>fan of</th><td>chloeh</td></tr>
+		<tr><th>lv of fannity</th><td>100</td></tr>
+	</table>
+		
+	</div>
+
+		
+
+	<div id="nav">
+	
+	<ul>
+		<li><a href="#">Link 1</a></li>
+		<li><a href="#">Link 2</a></li>
+		<li><a href="#">Link 3</a></li>
+		<li><a href="#">Link 4</a></li>
+		<li><a href="http://www1.uwe.ac.uk/et/csct.aspx" >CSCT Home Page</a></li>
+	</ul>
+	
+	</div>
+
+
 	<script src="index.js"></script>
   </body>
 </html>
