--- a/website1/index.html
+++ b/website1/index.html
@@ -29,33 +29,30 @@ h1 {
   </head>
   <body>
   
-  <div id="header">
-   <h1>Test Database? First link!</h1>  
-  </div>
+	<div id="header">
+		<h1>Welcome to My Website</h1>  
+	</div>
   
-  <div id=content>
+	<div id=content>
     
-		
-	<div id="img">
-		<img src="images/chloe.jpg" alt="CHLOE1" height="100" width="150">
-	</div>
-		
-	<div id="img">
-		<img src="images/chloe1.jpg" alt="CHLOEEE" height="130" width="100">
-	</div>
-
-
-	<table>
-		<tr><th>Name</th><td>Hi</td></tr>
-		<tr><th></th><td></td></tr>
-		<tr><th>.</th><td>.</td></tr>
-	</table>
+		<article>
+			The unicorn is the national animal of Scotland.
+		<article>
 		
 	</div>
 
 		
 
 	<div id="nav">
+	
+	<ul>
+		<li><a href="https://sj2-susanto.github.io/index1">Link 1(currently functional)</a></li>
+		<li><a href="https://sj2-susanto.github.io/index2">Link 2(currently functional)</a></li>
+		<li><a href="index1">Link 3</a></li>
+		<li><a href="index2">Link 4</a></li>
+		<li><a href="http://www1.uwe.ac.uk/et/csct.aspx" >CSCT Home Page</a></li>
+	</ul>
+	
 	</div>
 
 
