--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="presentational-only/presentational-only.css">
 
   <!-- responsive-full-background-image.css stylesheet contains the code you want -->
-  <link rel="stylesheet" href="web1.css">
+  <link rel="stylesheet" href="index.css">
   
   <!-- Not required: jquery.min.js and presentational-only.js is only used to demonstrate scrolling behavior of the viewport  -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
