--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
   </nav>
   <header class="container">
     <section class="content">
-      <h1>Responsive Full Background Image</h1>
-      <p class="sub-title"><strong>Resize your browser window</strong> <br /> to see the background image change in size</p>
-      <p><a class="button" id="load-more-content" href="#top">Load some content</a></p>
-      <p>To see scrolling behavior</p>
+      <h1>Welcome to Sam's website</h1>
+      <p class="sub-title"><strong>in here you will see</strong> <br /> ...smth? lol</p>
+      <p><a class="button" id="load-more-content" href="#top">!!$click here$!!</a></p>
+      <p>*clickbait 😂</p>
       
       <!-- Some content to demonstrate viewport scrolling behavior -->
       <div id="more-content">
