--- a/contactus.html
+++ b/contactus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Usaha Express Indonesia | Your Trusted Export and Import Partner</title>
+		<title>Usaha Express Indonesia | Contact Us</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -14,12 +14,10 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Usaha Express<br />
-						Indonesia</h1>
-						<p>Connecting businesses worldwide with reliable export and import solutions. Partner with us for fast, efficient, and global trade success.</p>
+						<h1>Contact Us</h1>
+						<p>More Information Below</p>
 						<ul class="actions">
-							<li><a href="#header" class="button i
-							solid solo fa-arrow-down scrolly">Explore</a></li>
+							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Explore</a></li>
 						</ul>
 					</div>
 
@@ -31,10 +29,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Home</a></li>		
+							<li><a href="index.html">Home</a></li>
 							<li><a href="services.html">Services</a></li>
 							<li><a href="aboutus.html">About Us</a></li>
-							<li><a href="contactus.html">Contact</a></li>
+							<li class="active"><a href="contactus.html">Contact</a></li>
 						</ul>
 						<ul class="icons">
 							<!--	<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li> -->
@@ -51,40 +49,51 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date" id="current-date"></span>
-									<h2><a href="aboutus.html">Usaha Express <br> Indonesia</br></a></h2>
-									<p>From customs clearance to international shipping, our expertise ensures your goods arrive on time, every time.</p>
-								</header>
-								<a href="aboutus.html" class="image main"><img src="images/logistics.jpg" alt="Usaha Express" /></a>
-								<ul class="actions special">
-									<li><a href="services.html" class="button large">Learn More</a></li>
-								</ul>
-								
-								<!-- <a href="aboutus.html" class="image main"><img src="images/beetle.jpg" alt="Usaha Express"/></a> -->
-							</article> 
+									<h2>Contact Us!</a></h2>
+									<p>Press the button below to copy our number to your clipboard!</p>
+										<header>
+										  <!--<a href="#" class="image main"><img src="images/logistics.jpg" alt="Global Logistics" /></a> -->
+										  <ul class="actions special">
+											<li>
+											  <!-- Button to copy number -->
+											  <button class="button large" onclick="copyNumber()">Copy Number</button>
+											</li>
+											<li>
+											  <!-- Link for direct call -->
+											  <a href="tel:+622154350604" class="button large">Or Call us here!</a>
+											</li>
+										  </ul>
+										</header>
+							</article>
 
 						<!-- Services Section -->
 						<section class="services">
 							<header class="major">
-								<h2>Our Services</h2>
-								<p>Explore our wide range of export and import solutions:</p>
+								<h2>Contact Us:</h2>
+								<p></p>
 							</header>
 							<div class="posts">
 								<article>
-									<h3>Customs Brokerage</h3>
-									<p>Expert handling of customs documentation to ensure smooth international trade.</p>
+									<h3>Phone Number</h3>
+									<p>+622154350604</p>
 								</article>
 								<article>
-									<h3>Freight Forwarding</h3>
-									<p>Comprehensive logistics services to transport your goods efficiently.</p>
+									<h3>Email</h3>
+									<p>info@exportimport.com</p>
 								</article>
-								<!-- <article>
-									<h3>Global Sourcing</h3>
-									<p>Connecting you with trusted suppliers and buyers across the globe.</p>
-								</article> -->
+								<article>
+									<h3>Adress</h3>
+									<p>Ruko Mutiara Taman Palem blok B1/68<br />
+									RT13/RW10, Cengkareng Timur<br />
+									Jakarta Barat<br />
+									11730<br />
+									Indonesia</p>
+								</article>
 							</div>
+							<div class="image main"><img src="images/ruko.jpg" alt="Export and Import Services" /></div>
 						</section>
 
-					</div>
+					</div> 
 
 				<!-- Footer -->
 					<footer id="footer">
@@ -130,7 +139,7 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-								<!--	<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li> -->
+									<!--	<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li> -->
 									<li><a href="https://www.facebook.com/usahaexpressindonesia" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="https://www.instagram.com/usahaexpress/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 								<!--	<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li> -->
